# LC2Registration

./: .gitignore  CMakeLists.txt  README.md
config/: Usage  parameters2dTo3d.yaml  parameters2dTo3d_result.yaml  parameters2d_affine.yaml  parameters3d_affine.yaml
config/Data/: CT_KidneyPhantom.raw  US_KidneyPhantom.raw
config/config_backup/: parameters2d.yaml  parameters2dTo3d.yaml  parameters2d_affine.yaml  parameters3d.yaml  parameters3d_affine.yaml
include/: RegistrationParametersConfig.h
src/Interpolator/: interpolator.cu  interpolator.cuh  spatialMappers.cu  spatialMappers.cuh  volumeImporter.cpp  volumeImporter.h
src/Optimizers/: optimizers.cu  optimizers.cuh
src/Utilities/: my_cuda_helper.cu  my_cuda_helper.cuh
src/cu_LC2/: cu_lc2_2d.cu  cu_lc2_2d.cuh  cu_lc2_3d.cu  cu_lc2_3d.cuh  cu_lc2_helper.cuh
src/mainRegistrationTool/: main.cu  md5.cpp
